kub-brandsSource-service/k8s/dp-kubBrandsSource.yaml

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dp-kub-brandssource-service
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: pod-kub-brandssource-service
        env: dev
    spec:
      containers:
      - name: cont-kub-brandssource-service
        image: ddas55/kub-brandssource-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8070
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: vm-kub-brandssource-service
          mountPath: "/config/" 
          readOnly: true
        livenessProbe:
          httpGet:
            path: /svcbrands/brands/healthz
            port: 8070
            httpHeaders:
             - name: X-Custom-Header
               value: Awesome
          initialDelaySeconds: 30
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /svcbrands/brands/rediness
            port: 8070
            httpHeaders:
             - name: X-Custom-Header
               value: Awesome
          initialDelaySeconds: 5
      volumes:
      - name: vm-kub-brandssource-service
        configMap:
          name: cm-kub-brandssource-service
          items:
          - key: application.properties 
            path: application.properties
