kub-brandsSource-service/k8s/ingress-kubBrandsSource.yaml


apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-brandssource-service
spec:
  rules:
  - http: 
     paths:
      - path: /svcbrands
        backend:
          serviceName: svc-kub-brandssource-service
          servicePort: 8070
#      - path: /foo
#        backend:
#          serviceName: s2
#          servicePort: 80
